Don't bother reresolving style when empty stylesheets get added (eg from empty <style> elements).  Also remove the methods for blowing away the ruletree during a style reresolve, since ruletrees are now garbage-collected.  Bug 196557, r+sr=dbaron