content/base/src/nsStyleSet.cpp
@@ -174,20 +174,6 @@ public:
   NS_IMETHOD Shutdown(nsIPresContext* aPresContext);
   NS_IMETHOD NotifyStyleContextDestroyed(nsIPresContext* aPresContext,
                                          nsStyleContext* aStyleContext);
-
-  // The following two methods can be used to tear down and reconstruct a rule tree.  The idea
-  // is to first call BeginRuleTreeReconstruct, which will set aside the old rule
-  // tree.  The entire frame tree should then have ReResolveStyleContext
-  // called on it.  With the old rule tree hidden from view, the newly resolved style contexts will
-  // resolve to rule nodes in a fresh rule tree, and the re-resolve system will properly compute
-  // the visual impact of the changes.
-  //
-  // After re-resolution, call EndRuleTreeReconstruct() to finally discard the old rule tree.
-  // This trick can be used in lieu of a full frame reconstruction when drastic style changes
-  // happen (e.g., stylesheets being added/removed in the DOM, theme switching in the Mozilla app,
-  // etc.
-  virtual nsresult BeginRuleTreeReconstruct();
-  virtual nsresult EndRuleTreeReconstruct();
   
   // For getting the cached default data in case we hit out-of-memory.
   // To be used only by nsRuleNode.
@@ -364,7 +350,6 @@ protected:
 
   nsRuleNode* mRuleTree; // This is the root of our rule tree.  It is a lexicographic tree of
                          // matched rules that style contexts use to look up properties.
-  nsRuleNode* mOldRuleTree; // Used during rule tree reconstruction.
   nsRuleWalker* mRuleWalker;   // This is an instance of a rule walker that can be used
                                // to navigate through our tree.
 
@@ -387,7 +372,6 @@ StyleSetImpl::StyleSetImpl()
   : mFrameConstructor(nsnull),
     mQuirkStyleSheet(nsnull),
     mRuleTree(nsnull),
-    mOldRuleTree(nsnull),
     mRuleWalker(nsnull),
     mInShutdown(PR_FALSE),
     mDestroyedCount(0)
@@ -1459,26 +1443,6 @@ nsresult
 StyleSetImpl::GetRuleTree(nsRuleNode** aResult)
 {
   *aResult = mRuleTree;
-  return NS_OK;
-}
-
-nsresult
-StyleSetImpl::BeginRuleTreeReconstruct()
-{
-  delete mRuleWalker;
-  mRuleWalker = nsnull;
-  mOldRuleTree = mRuleTree;
-  mRuleTree = nsnull;
-  return NS_OK;
-}
-
-nsresult
-StyleSetImpl::EndRuleTreeReconstruct()
-{
-  if (mOldRuleTree) {
-    mOldRuleTree->Destroy();
-    mOldRuleTree = nsnull;
-  }
   return NS_OK;
 }
 
